crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_assignment-2.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"p.x = 5;\"#)"
---
[
    Stmt {
        kind: Expr {
            expr: Expr {
                kind: Assign {
                    left: Expr {
                        kind: Member {
                            object: Expr {
                                kind: Identifier(
                                    "p",
                                ),
                                loc: SourceLocation {
                                    start: Position {
                                        line: 1,
                                        column: 1,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 2,
                                    },
                                },
                            },
                            property: Expr {
                                kind: Identifier(
                                    "x",
                                ),
                                loc: SourceLocation {
                                    start: Position {
                                        line: 1,
                                        column: 3,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 4,
                                    },
                                },
                            },
                        },
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 1,
                            },
                            end: Position {
                                line: 1,
                                column: 4,
                            },
                        },
                    },
                    op: Assign,
                    right: Expr {
                        kind: Literal(
                            Number(
                                "5",
                            ),
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 7,
                            },
                            end: Position {
                                line: 1,
                                column: 8,
                            },
                        },
                    },
                },
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 8,
                    },
                },
            },
        },
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
    },
]
