crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_assignment.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"y = m*x + b\"#)"
---
[
    Stmt {
        kind: Expr {
            expr: Expr {
                kind: Assign(
                    Assign {
                        left: Expr {
                            kind: Ident(
                                Ident {
                                    name: "y",
                                    span: 0..1,
                                },
                            ),
                            span: 0..1,
                            inferred_type: None,
                        },
                        op: Assign,
                        right: Expr {
                            kind: Binary(
                                Binary {
                                    left: Expr {
                                        kind: Binary(
                                            Binary {
                                                left: Expr {
                                                    kind: Ident(
                                                        Ident {
                                                            name: "m",
                                                            span: 4..5,
                                                        },
                                                    ),
                                                    span: 4..5,
                                                    inferred_type: None,
                                                },
                                                op: Times,
                                                right: Expr {
                                                    kind: Ident(
                                                        Ident {
                                                            name: "x",
                                                            span: 6..7,
                                                        },
                                                    ),
                                                    span: 6..7,
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                        span: 4..7,
                                        inferred_type: None,
                                    },
                                    op: Plus,
                                    right: Expr {
                                        kind: Ident(
                                            Ident {
                                                name: "b",
                                                span: 10..11,
                                            },
                                        ),
                                        span: 10..11,
                                        inferred_type: None,
                                    },
                                },
                            ),
                            span: 4..11,
                            inferred_type: None,
                        },
                    },
                ),
                span: 0..11,
                inferred_type: None,
            },
        },
        span: 0..11,
    },
]
