crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_for_loop.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"\n            for ({x, y} in points) {\n                console.log(`(${x}, ${y})`)\n            }\"#)"
---
[
    Stmt {
        kind: For(
            ForStmt {
                left: Pattern {
                    kind: Object(
                        ObjectPat {
                            props: [
                                Shorthand(
                                    ShorthandPatProp {
                                        span: 19..20,
                                        ident: BindingIdent {
                                            name: "x",
                                            span: 19..20,
                                            mutable: false,
                                        },
                                        init: None,
                                    },
                                ),
                                Shorthand(
                                    ShorthandPatProp {
                                        span: 22..23,
                                        ident: BindingIdent {
                                            name: "y",
                                            span: 22..23,
                                            mutable: false,
                                        },
                                        init: None,
                                    },
                                ),
                            ],
                            optional: false,
                        },
                    ),
                    span: 18..24,
                    inferred_type: None,
                },
                right: Expr {
                    kind: Ident(
                        Ident {
                            name: "points",
                            span: 28..34,
                        },
                    ),
                    span: 28..34,
                    inferred_type: None,
                },
                body: Block {
                    span: 35..95,
                    stmts: [
                        Stmt {
                            kind: Expr(
                                ExprStmt {
                                    expr: Expr {
                                        kind: Call(
                                            Call {
                                                callee: Expr {
                                                    kind: Member(
                                                        Member {
                                                            object: Expr {
                                                                kind: Ident(
                                                                    Ident {
                                                                        name: "console",
                                                                        span: 54..61,
                                                                    },
                                                                ),
                                                                span: 54..61,
                                                                inferred_type: None,
                                                            },
                                                            property: Ident(
                                                                Ident {
                                                                    name: "log",
                                                                    span: 62..65,
                                                                },
                                                            ),
                                                            opt_chain: false,
                                                        },
                                                    ),
                                                    span: 54..65,
                                                    inferred_type: None,
                                                },
                                                type_args: None,
                                                args: [
                                                    Expr {
                                                        kind: TemplateLiteral(
                                                            TemplateLiteral {
                                                                parts: [
                                                                    Str {
                                                                        span: 66..68,
                                                                        value: "(",
                                                                    },
                                                                    Str {
                                                                        span: 72..74,
                                                                        value: ", ",
                                                                    },
                                                                    Str {
                                                                        span: 78..80,
                                                                        value: ")",
                                                                    },
                                                                ],
                                                                exprs: [
                                                                    Expr {
                                                                        kind: Ident(
                                                                            Ident {
                                                                                name: "x",
                                                                                span: 70..71,
                                                                            },
                                                                        ),
                                                                        span: 70..71,
                                                                        inferred_type: None,
                                                                    },
                                                                    Expr {
                                                                        kind: Ident(
                                                                            Ident {
                                                                                name: "y",
                                                                                span: 76..77,
                                                                            },
                                                                        ),
                                                                        span: 76..77,
                                                                        inferred_type: None,
                                                                    },
                                                                ],
                                                            },
                                                        ),
                                                        span: 66..80,
                                                        inferred_type: None,
                                                    },
                                                ],
                                                opt_chain: false,
                                                throws: None,
                                            },
                                        ),
                                        span: 54..81,
                                        inferred_type: None,
                                    },
                                },
                            ),
                            span: 54..81,
                            inferred_type: None,
                        },
                    ],
                },
            },
        ),
        span: 18..95,
        inferred_type: None,
    },
]
