crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_jsx.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"let button = <Button count={5} foo=\"bar\"></Button>\"#)"
---
[
    Stmt {
        kind: VarDecl(
            VarDecl {
                is_declare: false,
                is_var: false,
                pattern: Pattern {
                    kind: Ident(
                        BindingIdent {
                            name: "button",
                            span: 4..10,
                            mutable: false,
                        },
                    ),
                    span: 4..10,
                    inferred_type: None,
                },
                expr: Some(
                    Expr {
                        kind: JSXElement(
                            JSXElement {
                                span: 14..50,
                                opening: JSXOpeningElement {
                                    name: Ident(
                                        Ident {
                                            name: "Button",
                                            span: 14..20,
                                        },
                                    ),
                                    attrs: [
                                        JSXAttr {
                                            name: "count",
                                            value: Some(
                                                ExprContainer(
                                                    JSXExprContainer {
                                                        expr: Expr {
                                                            kind: Num(
                                                                Num {
                                                                    value: "5",
                                                                },
                                                            ),
                                                            span: 28..29,
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                            ),
                                        },
                                        JSXAttr {
                                            name: "foo",
                                            value: Some(
                                                Str(
                                                    "bar",
                                                ),
                                            ),
                                        },
                                    ],
                                    self_closing: false,
                                },
                                children: [],
                                closing: Some(
                                    JSXClosingElement {
                                        name: Ident(
                                            Ident {
                                                name: "Button",
                                                span: 41..50,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        span: 14..50,
                        inferred_type: None,
                    },
                ),
                type_ann: None,
            },
        ),
        span: 0..50,
        inferred_type: None,
    },
]
